syntax = "proto3";
import "google/api/annotations.proto";
import "github.com/lampard1014/aphro/CommonBiz/Response/PB/response.proto";


package Aphro.Commodity.pb;

service CommodityService {

		//增加商品
		rpc commodityCreate(CommodityCreateRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
        post: "/merchant/commodity/create"
        body: "*"
			};
		}

    //删除商品
    rpc commodityDelete(CommodityDeleteRequest) returns (Aphro.CommonBiz.Response) {
      option (google.api.http) = {
        post: "/merchant/commodity/delete"
        body: "*"
      };
    }

    //更新商品
    rpc commodityUpdate(CommodityUpdateRequest) returns (Aphro.CommonBiz.Response) {
      option (google.api.http) = {
        post: "/merchant/commodity/update"
        body: "*"
      };

    }
      // 查看商品
    rpc commodityQuery(CommodityQueryRequest) returns (Aphro.CommonBiz.Response) {
       option (google.api.http) = {
         post: "/merchant/commodity/query"
         body: "*"
       };
    }
}

message InnerComodityInfo {
  string name = 1;
  float price = 2;
  uint32 merchantID = 3;
  uint32 id = 4;
}

message CommodityCreateRequest {
    string sessionToken = 7;
    InnerComodityInfo good = 1;
}

message CommodityCreateResponse {
  bool success = 1;
  uint32 commodityID = 2;
}

message CommodityDeleteRequest {
  string sessionToken = 7;

  uint32 merchantID = 3;
  uint32 id = 4;
}

message CommodityDeleteResponse {
  bool success = 1;
}

message CommodityUpdateRequest {
  string sessionToken = 7;

    uint32 id = 1;

  uint32 merchantID = 3;
    string name = 4;
    float price = 2;
}

message CommodityUpdateResponse {
  bool success = 1;
}

message CommodityQueryRequest {
  string sessionToken = 1;

  uint32 merchantID = 2;
  uint32 id = 3;
}

message CommodityQueryResponse {
    bool     success  = 2;
    repeated InnerComodityInfo goods = 1;
}